--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,7 +1,7 @@
 <div class="span8 offset4">
     <h1 class="brand-name">iBergler</h1>
     <div class="well">
-        <%= form_tag "/search/new", :method => "post", :class => 'form-search' do %>
+        <%= form_tag "/search/results", :method => "get", :class => 'form-search' do %>
             <div class="input-append">  
                 <%= text_field_tag 'query', nil, 
                   :class => 'span6 search-query', 
