redesigned the search and result views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div class="container">
 
 <%= yield %>
 
+</div>
+<hr>
+<p class="footer-text muted"><small>COMP 479 P3 - Mikhail Chliakhovski, Alex Ciornei, Stephen Birarda</br>December 6th, 2013</small></p>
 </body>
 </html>
