--- a/app/views/search/results.html.erb
+++ b/app/views/search/results.html.erb
@@ -1,3 +1,4 @@
+<%= render "search_box" %>
 <% @index.search_each params[:query], {:offset => @offset} do |doc_id, score| %>
     <p><%= link_to @index[doc_id][:title], @index[doc_id][:url] %></p>
 <% end %>
