change name of app to iBergler

--- a/app/views/search/results.html.erb
+++ b/app/views/search/results.html.erb
@@ -1,3 +1,4 @@
+<%- title "iBergler - #{@query}" %>
 <%= render "search_box" %>
 <% if @results.total_hits == 0 %>
     <p>No results found for that query. Maybe we need to go deeper?</p>
